--- a/FelyneDancer/index.html
+++ b/FelyneDancer/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<meta charset="utf-8">
+	<title>FelyneDancer</title>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+
 </head>
 
 <body>
-    喵
+	喵
+	<script src="sketch.js"></script>
 </body>
 
 </html>
