--- a/FelyneDancer/index.html
+++ b/FelyneDancer/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<title>FelyneDancer</title>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-
+  <meta charset="UTF-8" />
+  <title>喵？</title>
+  <script>
+    window.location.href = "https://editor.p5js.org/RebeccaX/full/Lf7UCKlV5";
+  </script>
 </head>
 
 <body>
-	喵
-	<script src="sketch.js"></script>
+
 </body>
 
 </html>
